test/bad/continue-outside-of-loop.bq
def int fun(int n) {
    continue;
}
fun(0);
